# mdrag

./: .gitignore  CHANGELOG.md  EVAL_REPORT.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
examples/sample-vault/: welcome.md
examples/sample-vault/notes/: meeting-2026-01-15.md
examples/sample-vault/research/: competitor-analysis.md
src/mdrag/: chunking.py  cli.py  config.py  evaluator.py  indexer.py  retrieval.py  server.py  watcher.py
src/wiki_mcp/: cli.py  config.py  indexer.py  server.py
tests/: eval-queries.yaml  test_chunking.py  test_config.py  test_eval_regression.py  test_indexer.py  test_retrieval.py  test_stability.py  test_watcher.py
